clusters/home/apps/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    private-gateway-listeners: "true"
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    volsync.backube/privileged-movers: "true"
