clusters/home/apps/app/ntfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: ntfy
  labels:
    app: ntfy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: docker.io/binwiederhier/ntfy:v2.26.3
          args:
            - serve
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /v1/health
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /v1/health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
            periodSeconds: 30
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              readOnly: true
            - name: data
              mountPath: /var/lib/ntfy
      volumes:
        - name: config
          secret:
            secretName: ntfy-config
        - name: data
          persistentVolumeClaim:
            claimName: ntfy
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  labels:
    app: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
spec:
  parentRefs:
    - name: gw-public
      namespace: gateway
      sectionName: https
  hostnames:
    - ntfy.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: ntfy
          port: 80
