clusters/home/apps/app/papra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papra
  labels:
    app: papra
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: papra
  template:
    metadata:
      labels:
        app: papra
    spec:
      containers:
        - name: papra
          image: ghcr.io/papra-hq/papra:26.6.1-rootless
          imagePullPolicy: Always
          ports:
            - containerPort: 1221
          volumeMounts:
            - name: papra-docs
              mountPath: /app/app-data
      volumes:
        - name: papra-docs
          persistentVolumeClaim:
            claimName: papra-docs
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: papra
  name: papra
spec:
  selector:
    app: papra
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1221
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: papra
spec:
  parentRefs:
    - name: gw-private
      namespace: gateway
      sectionName: https
  hostnames:
    - docs.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: papra
          port: 80
